apps/connecthub/k8/httproute/httpbin-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin
  namespace: connecthub
spec:
  hostnames:
    - connecthub.pulsework360.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: connecthub-gateway
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: connecthub-frontend
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
        - path:
            type: PathPrefix
            value: /delay
    - backendRefs:
        - group: ""
          kind: Service
          name: fastapi-service
          port: 8000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /auth
        - path:
            type: PathPrefix
            value: /onboarding
    - backendRefs:
        - group: ""
          kind: Service
          name: connecthub-telephony
          port: 8000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /telephony
    - backendRefs:
        - group: ""
          kind: Service
          name: ivrblast-service
          port: 8000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /ivrBlast
    - backendRefs:
        - group: ""
          kind: Service
          name: kafka-service
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix  
            value: /kafkaapi
